--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -257,7 +257,7 @@ server {
 	{{ end }}
 
 	{{ if (exists (printf "/etc/nginx/certs/%s.chain.pem" $cert)) }}
-	ssl_stapling on;
+	ssl_stapling off;
 	ssl_stapling_verify on;
 	ssl_trusted_certificate {{ printf "/etc/nginx/certs/%s.chain.pem" $cert }};
 	{{ end }}
