--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -92,6 +92,7 @@ proxy_set_header Proxy "";
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen 80;
+	add_header "Access-Control-Allow-Origin" *;
 	{{ if $enable_ipv6 }}
 	listen [::]:80;
 	{{ end }}
@@ -103,6 +104,7 @@ server {
 server {
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
 	listen 443 ssl http2;
+	add_header "Access-Control-Allow-Origin" *;
 	{{ if $enable_ipv6 }}
 	listen [::]:443 ssl http2;
 	{{ end }}
